# funcy-stubs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: uv-publish.yml
funcy-stubs/: __init__.pyi  calc.pyi  colls.pyi  debug.pyi  decorators.pyi  flow.pyi  funcmakers.pyi  funcools.pyi  funcs.pyi  objects.pyi  primitives.pyi  seqs.pyi  strings.pyi  tree.pyi  types.pyi
src/funcy-stubs/: __init__.pyi  _types.py  calc.pyi  colls.pyi  debug.pyi  decorators.pyi  flow.pyi  funcmakers.pyi  funcs.pyi  objects.pyi  primitives.pyi  seqs.pyi  strings.pyi  tree.pyi  types.pyi
