[project]
name = "funcy-typing"
version = "2.0.6"
description = "Stubs for funcy package"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ratschew Fedor", email = "feodor.ra@me.com" }]
keywords = ["funcy", "types", "typing", "stubs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Stubs Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["funcy~=2.0", "typing-extensions>=4.11"]

[dependency-groups]
dev = ["pre-commit~=3.5.0", "pyright[nodejs]<2.0.0", "ruff~=0.11.0"]

[project.urls]
Repository = "https://github.com/feodor-ra/funcy-stubs"
Homepage = "https://github.com/feodor-ra/funcy-stubs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funcy-stubs"]

[tool.ruff]
include = ["src/funcy-stubs/**"]
line-length = 88
indent-width = 4
target-version = "py38"
fix = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "Q",
    "TID",
    "UP",
    "C4",
    "RET",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "ANN",
    "COM",
    "PYI",
    "RUF",
]
ignore = ["PLR0913", "ANN401", "COM812"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.pyright]
include = ["src/funcy-stubs/"]
typeCheckingMode = "strict"
